--- a/05-javascript-d3/src/App.css
+++ b/05-javascript-d3/src/App.css
@@ -1,3 +1,7 @@
+.viz {
+  position: relative;
+}
+
 .scale-text {
   font-weight: normal;
   font-size: .8em;
@@ -27,4 +31,28 @@
 
 .legend-manufacturer--active .legend-manufacturer__text {
   font-weight: bold;
+}
+
+dl {
+  margin: 0.25em 0;
+}
+
+dt {
+  font-weight: bold;
+}
+
+dd {
+  margin: 0;
+  margin-bottom: 0.25rem;
+}
+
+.tooltip {
+  position: absolute;
+  background-color: #fff;
+  left: 0;
+  top: 0;
+  box-shadow: 0 2px 5px rgba(0,0,0,.25);
+  border-radius: 5px;
+  transition: 400ms;
+  padding: .5rem;
 }
